# learnable-wavelets

./: .gitignore  benchmark.py  inference.py  liu4k_dataset.py  main.py  model.example.yaml  pyproject.toml  readme.md  requirements.txt  test1.ipynb  wavelet.py
bench/: base.py  jpeg.py  learnable_wavelets.py
configs/: initial_model.yaml  runner.yaml  simulated_annealing.yaml
learnable_wavelets/: __init__.py  config.py  module.py  mp.py  plots.py  run.py  sa_manager.py  tools.py  train.py  wandb.py
learnable_wavelets/datasets/: kodak.py  liu4k.py  liu4k_patches.py  mixed.py
learnable_wavelets/model/: __init__.py  filters.py  loss.py  metrics.py  transformation.py
learnable_wavelets/plots/: wavelet.py
learnable_wavelets/simulated_annealing/: __init__.py  moves.py  neighbours.py  tree.py
notebooks/: notebook1.ipynb  notebook2.ipynb  notebook3.ipynb
params/: config.yaml  state.pt
