[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["learnable_wavelets"]

[project]
name = "learnable-wavelets"
version = "0.1.0"
description = "Learnable wavelets for signal and image processing"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "isort>=8.0.1",
  "black[jupyter]>=26.3.1",
]
